# verifiable-fhe-paper

./: Cargo.toml  README.md  sindri.json
data/: bootstrap_outputs.json  bootstrap_proof.json  secrets.json  sindri_proof.json
data/logs/: 1_vfhe_encrypt.txt  2_vfhe_prove_local.txt  3_vfhe_prove_sindri.txt  4_sindri_proof_create.txt  5_vfhe_verify.txt  6_vfhe_decrypt.txt
src/: decrypt.rs  encrypt.rs  lib.rs  main.rs  prove_local.rs  prove_sindri.rs  verify.rs
src/vtfhe/: ivc_based_vpbs.rs
