[package]
name = "vfhe_plonky2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vfhe_encrypt"
path = "src/encrypt.rs"

[[bin]]
name = "vfhe_prove_local"
path = "src/prove_local.rs"

[[bin]]
name = "vfhe_prove_sindri"
path = "src/prove_sindri.rs"

[[bin]]
name = "vfhe_verify"
path = "src/verify.rs"

[[bin]]
name = "vfhe_decrypt"
path = "src/decrypt.rs"

[dependencies]
plonky2 = { version = "0.2.0", features = ["timing"]}
anyhow = { version = "1.0" }
log = { version = "0.4.14" }
rand = "0.8.5"
env_logger = "0.10.0"
simple-logging = "2.0.2"
hashbrown = "0.14.2"
rand_distr = "0.4.3"
itertools = "0.12.1"
serde_json = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
base64 = "0.22.1"